# example-rust-license-validation

./: Cargo.toml  README.md
src/: main.rs
