[package]
name = "example-rust-license-validation"
version = "0.1.0"
authors = ["Zeke Gabrielse <zeke@keygen.sh>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"